[project]
name = "rag-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "litellm>=1.89.2",
    "openai>=2.43.0",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
]
